--- a/wiki/InstallingJaikuengineUsingOSX.wiki
+++ b/wiki/InstallingJaikuengineUsingOSX.wiki
@@ -80,3 +80,13 @@ While running the update script, you'll have to enter the email address and pass
 When the update script has finished, browse to [http://helloworld.appspot.com/install] (remember to replace helloworld with your App Engine application name) and create a root user.
 
 Now sign up and start using your own instance of Jaikuengine! :)
+
+== Email queues, etc. ==
+In order to process some of queues, you might have to kick jaikuengine by browsing to [http://helloworld.appspot.com/_ah/queue/default?secret=SECRET] (replace "helloworld" by your application name and "SECRET" with what is defined by `settings.py` and `QUEUE_VENDOR_SECRET`)
+
+== Running the test suite ==
+After checking out jaikuengine and copying `local_settings.example.py` to `local_settings.py`, it's a good idea to run the test suite. You run it as follows:
+
+  * `python manage.py test`
+
+It will print out a lot of things, including warnings, before hopefully ending with "OK". If not, check the errors and post a question on channel #jaikuengine on [http://jaiku.com].
